--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,10 +5,10 @@ html
     = stylesheet_link_tag "application", :media => "all"
     meta name="viewport" content="initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0"
     link rel="icon" type="image/png" href="#{image_path('logo.png')}"
-    link rel="apple-touch-icon" sizes="57x57" href="#{image_path(apple-icon-57x57.png}"
-    link rel="apple-touch-icon" sizes="72x72" href="#{image_path(apple-icon-72x72.png}"
-    link rel="apple-touch-icon" sizes="114x114" href="#{image_path(apple-icon-114x114.png}"
-    link rel="apple-touch-icon" sizes="144x144" href="#{image_path(apple-icon-144x144.png}"
+    link rel="apple-touch-icon" sizes="57x57" href="#{image_path('apple-icon-57x57.png')}"
+    link rel="apple-touch-icon" sizes="72x72" href="#{image_path('apple-icon-72x72.png')}"
+    link rel="apple-touch-icon" sizes="114x114" href="#{image_path('apple-icon-114x114.png')}"
+    link rel="apple-touch-icon" sizes="144x144" href="#{image_path('apple-icon-144x144.png')}"
     = csrf_meta_tags
     meta name="apple-mobile-web-app-capable" content="yes"
   body
