Add sorting UI to members

--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -155,3 +155,15 @@ ul.family-suggestions {
     margin-left: 3px;
   }
 }
+
+.sort-options {
+  ul {
+    list-style: none;
+    margin: 0;
+  }
+
+  li {
+    float: left;
+    margin-right: 5px;
+  }
+}
