--- a/app/views/members/index.html.slim
+++ b/app/views/members/index.html.slim
@@ -7,10 +7,26 @@
     h3.page-title
       | Members
       small (#{@filter_form.results.count} matching)
+    .sort-options
+      ul
+        li Sort By:
+        li data-attr='name' data-direction='asc'
+          a href='#' class='js'
+            i.icon-sort
+            | Name
+        li data-attr='age' data-direction='asc'
+          a href='#' class='js'
+            i.icon-sort
+            | Age
+        li data-attr='gender' data-direction='asc'
+          a href='#' class='js'
+            i.icon-sort
+            | Gender
+      .clearfix
     .metro-list.members-list
       - @filter_form.results.each do |member|
         - number = member.phone_numbers.first
-        .metro-list-item *{:class => [@color] } data-name=member.name data-age=member.age
+        .metro-list-item *{:class => [@color] } data-name=member.full_name data-age=member.age data-dateOfBirth=member.date_of_birth data-gender=member.gender
           .row-fluid
             span.pull-right.metro-list-item-attachments.hidden-phone
               = link_to edit_member_path(member) do
@@ -45,7 +61,7 @@ script id="loading-template" type="text/x-handlebars-template"
  .metro-list-loading-row Loading Members...
 
 script id="member-template" type="text/x-handlebars-template"
-  .metro-list-item *{:class => [@color]} data-name='{{name}}' data-age='{{age}}'
+  .metro-list-item *{:class => [@color]} data-name='{{name}}' data-age='{{age}}' data-dateOfBirth='{{dateOfBirth}}' data-gender='{{gender}}'
     .row-fluid
       span.pull-right.metro-list-item-attachments.hidden-phone
         = link_to '{{editPath}}' do
