--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -263,3 +263,27 @@ ul.family-suggestions {
   padding-bottom: 5px;
   text-align: justify;
 }
+
+.family-member-name {
+  font-size: 24px;
+  font-family: 'Open Sans';
+  line-height: 34px;
+  color: #666;
+
+  i[class^='icon-'] {
+    margin-right: 5px;
+  }
+  small {
+    margin-left: 5px;
+    font-size: 18px;
+    font-weight: 200;
+    line-height: 22px;
+  }
+}
+
+.family-members-header {
+  margin-bottom: -10px;
+  font-family: 'BebasNeueRegular';
+  font-size: 14px;
+  color: #666;
+}
