--- a/app/views/members/index.html.slim
+++ b/app/views/members/index.html.slim
@@ -32,12 +32,13 @@
         - number = member.phone_numbers.first
         .metro-list-item *{:class => [@color] } data-name=member.full_name data-age=member.age data-dateOfBirth=member.date_of_birth data-gender=member.gender data-birthday=member.birthday
           .row-fluid
-            span.pull-right.metro-list-item-attachments.hidden-phone
-              = link_to edit_member_path(member) do
-                i.icon-wrench *{:class => ["#{@color}-secondary"]}
-              = link_to member_path(member),
-                class: 'js', method: :delete, confirm: "Are you sure?" do
-                i.icon-trash *{:class => ["#{@color}-secondary"]}
+            - if current_user.can?(:edit_members)
+              span.pull-right.metro-list-item-attachments.hidden-phone
+                = link_to edit_member_path(member) do
+                  i.icon-wrench *{:class => ["#{@color}-secondary"]}
+                = link_to member_path(member),
+                  class: 'js', method: :delete, confirm: "Are you sure?" do
+                  i.icon-trash *{:class => ["#{@color}-secondary"]}
             .pull-right.metro-list-item-attachments.visible-phone
               = link_to "mailto:#{member.email}" do
                 i.icon-envelope *{:class => ["#{@color}-secondary"]}
