--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,6 +17,8 @@ html
         .pull-right
           i.icon-reorder.menu-icon
           ul.nav-menu
+            li= link_to logout_path do
+              i.icon-signout
             - if current_user.can?(:read_members)
               li= link_to 'Members', members_path
             - if current_user.can?(:read_worship)
@@ -34,6 +36,7 @@ html
       - if current_user.can?(:read_members)
         li
           = link_to 'Members', members_path
+        li= link_to 'Logout', logout_path
     div.container-fluid
       - if flash[:error]
         div.alert.alert-error
