--- a/app/views/members/index.html.slim
+++ b/app/views/members/index.html.slim
@@ -2,8 +2,9 @@
   = render 'filter_form'
   .span10
     .pull-right.page-buttons
-      = link_to new_member_path, class: 'btn' do
-        i.icon-plus
+      - if current_user.can? :edit_members
+        = link_to new_member_path, class: 'btn' do
+          i.icon-plus
     h3.page-title
       | Members
       small#matching-count (#{@filter_form.results.count} matching)
