--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -39,6 +39,10 @@
   font-family: "Segoe UI", Helvetica, Arial, sans-serif;
   font-size: 14px;
   cursor: pointer;
+
+  i[class^='icon-'] {
+    margin-right: 5px;
+  }
 }
 
 .btn-link-red {
@@ -100,6 +104,7 @@
 }
 
 .form-subsection-header {
+  margin-top: 5px;
   font-size: 14px;
   font-weight: bold;
 }
@@ -142,3 +147,14 @@ input[type="text"].required-field {
   -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(236, 224, 82, 0.8);
   box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 2px rgba(236, 224, 82, 0.8);
 }
+
+.radio-label {
+  display: inline;
+  margin-right: 10px;
+
+  input[type='radio'] {
+    vertical-align: baseline;
+    margin-right: 5px;
+  }
+}
+
